// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BitcoinPriceStats should render correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {},
      ]
    }
  >
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    >
      1 
      BTC
    </PeachText>
    <PriceFormat
      amount={400000}
      currency="EUR"
      round={true}
      style={
        [
          {
            "color": "#F56522",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {},
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {},
        {},
      ]
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      1 EUR
    </PeachText>
    <PeachText
      style={
        [
          {
            "color": "#F56522",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {},
          {
            "textAlign": "right",
          },
        ]
      }
    >
      250 sats
    </PeachText>
  </View>
</View>
`;

exports[`BitcoinPriceStats should render medium screens correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
      ]
    }
  >
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        }
      }
    >
      1 
      BTC
    </PeachText>
    <PriceFormat
      amount={400000}
      currency="EUR"
      round={true}
      style={
        [
          {
            "color": "#F56522",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 0,
        },
        {
          "alignItems": "flex-end",
        },
      ]
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      1 EUR
    </PeachText>
    <PeachText
      style={
        [
          {
            "color": "#F56522",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      250 sats
    </PeachText>
  </View>
</View>
`;
